@@ -22,7 +22,7 @@ function Setup
 
 function TearDown
 {
-    Remove-Certificate -Certificate $cert -StoreLocation LocalMachine -StoreName My
+    Uninstall-Certificate -Certificate $cert -StoreLocation LocalMachine -StoreName My
     Remove-Module Carbon
 }
 
