@@ -35,6 +35,7 @@ This release contains many backwards incompatible changes.  Take the following s
  * Replace usages of `Test-SslCertificateBinding -IPPort <string>` with `Test-SslCertificate [-IPAddress <IPAddress>] [-Port <UInt16>]`.
  * Replace usages of `Set-SslCertificateBinding -IPPort <string>` with `Install-SslCertificateBinding [-IPAddress <IPAddress>] [-Port <UInt16>]`.  The `IPAddress` parameter is only needed if binding to a specific address (i.e. *not* 0.0.0.0).  The `Port` parameter is only needed if it is *not* 443.
  * Replace usages of `Remove-SslCertificateBinding -IPPort <string>` with `Uninstall-SslCertificateBinding [-IPAddress <IPAddress>] [-Port <UInt16>]`.  The `IPAddress` parameter is only needed if binding to a specific address (i.e. *not* 0.0.0.0).  The `Port` parameter is only needed if it is *not* 443.
+ * Replace usages of `Remove-Certificate` with `Uninstall-Certificate`.
  
 ## Bug Fixes
  * [Install-Service](http://get-carbon.org/help/Install-Service.html) not granting default service identity, Network Service, the correct permissions.
@@ -99,6 +100,7 @@ This release contains many backwards incompatible changes.  Take the following s
  * Replaced `IPPort` parameter on [Install-SslCertificateBinding](http://get-carbon.org/help/Install-SslCertificateBinding.html) with separate `IPAddress` and `Port` parameters.  Set `IPAddress` only if you want to bind to a specific IP address (i.e. *not* 0.0.0.0).  Set `Port` if *not* binding to port 443.
  * Renamed `Remove-SslCertificateBinding` to [Uninstall-SslCertificateBinding](http://get-carbon.org/help/Uninstall-SslCertificateBinding.html).
  * Replaced `IPPort` parameter on [Uninstall-SslCertificateBinding](http://get-carbon.org/help/Uninstall-SslCertificateBinding.html) with separate `IPAddress` and `Port` parameters.  Set `IPAddress` only if you want to remove a binding for a specific IP address (i.e. *not* 0.0.0.0).  Set `Port` if the binding is *not* on port 443.
+ * Renamed `Remove-Certificate` to [Uninstall-Certificate](http://get-carbon.org/help/Uninstall-Certificate.html).
  
 # 0.4.0.1 (18 December 2012)
 
